added a new endpoint for batch update
